# expression-parser

./: CMakeLists.txt  add.h  divide.h  equalto.h  greaterthan.h  lessthan.h  minus.h  module3.cpp  negation.h  operand.cpp  operand.h  or.h  parse.cpp  parse.h  plus.h  subexpression.cpp  subexpression.h  symboltable.cpp  symboltable.h  ternary.h  times.h  variable.cpp  variable.h
